<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/dp_110"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:text="@string/str_username"
                    android:textColor="@color/txt_font_black2" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_realname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:hint="@string/str_fill_real_name"
                    android:layout_marginRight="@dimen/dp_10"
                    android:maxLines="1"
                    android:textColorHint="@color/color_text_gray7"
                    android:textSize="@dimen/text_size_xnormal" />

            </RelativeLayout>

        </LinearLayout>

        <View
            style="@style/line"
            android:layout_marginLeft="@dimen/dp_100" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/dp_110"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:text="@string/str_wechat_number"
                    android:textColor="@color/txt_font_black2" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_wechat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@null"
                    android:hint="@string/str_24_hour_service_abroad"
                    android:maxLines="1"
                    android:textColorHint="@color/color_text_gray7"
                    android:textSize="@dimen/text_size_xnormal" />

            </RelativeLayout>

        </LinearLayout>

        <View
            style="@style/line"
            android:layout_marginLeft="@dimen/dp_100" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/dp_110"
                android:layout_height="56dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:text="@string/str_phone_number"
                    android:textColor="@color/txt_font_black2"
                    android:textSize="@dimen/text_size_xnormal" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="+86"
                    android:textColor="@color/txt_font_black2" />

                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:background="@color/color_text_gray7" />

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/str_receive_confirmation_message"
                    android:maxLength="11"
                    android:layout_marginRight="@dimen/dp_10"
                    android:maxLines="1"
                    android:textColorHint="@color/color_text_gray7"
                    android:textSize="@dimen/text_size_xnormal" />

            </LinearLayout>

        </LinearLayout>

        <View
            style="@style/line"
            android:layout_marginLeft="@dimen/dp_100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/dp_110"
                android:layout_height="56dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:text="@string/str_email"
                    android:textColor="@color/txt_font_black2"
                    android:textSize="@dimen/text_size_xnormal" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_email_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@null"
                    android:hint="@string/str_receive_confirmation_mail"
                    android:maxLines="1"
                    android:textColorHint="@color/color_text_gray7"
                    android:textSize="@dimen/text_size_xnormal" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>