<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UpdatePwdActivity"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_51"
        android:layout_marginTop="@dimen/dp_70"
        android:text="@string/str_update_pwd"
        android:textColor="@color/txt_font_black2"
        android:textSize="@dimen/text_size_most"
        android:textStyle="bold"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_69"
        android:layout_marginRight="@dimen/dp_50">

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_2"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:hint="@string/str_input_old_pwd"
            android:textColor="@color/color_text_gray"
            android:maxLength="20"
            android:textSize="@dimen/text_size_medium" />

    </RelativeLayout>

    <View
        android:id="@+id/line_password"
        style="@style/line"
        android:layout_marginLeft="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_45" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="为了您的账号安全，请先输入原密码"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_11"
        android:drawableLeft="@mipmap/icon_input_old_pwd_prompt"
        android:drawablePadding="@dimen/dp_3"
        android:textSize="@dimen/text_size_xtiny" />

    <TextView
        android:id="@+id/tv_update_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@+id/llyt_login_input"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_50"
        android:background="@drawable/bg_rect_gray_shape"
        android:gravity="center"
        android:text="@string/str_go_to_update_pwd"
        android:textColor="@color/white"
        android:alpha="0.59"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>