<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llyt_bind_phone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BindPhoneActivity"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:background="@color/white">

    <include layout="@layout/login_toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_70"
        android:text="@string/str_bind_phone"
        android:textColor="@color/txt_font_black2"
        android:textSize="@dimen/text_size_most"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_50">

        <TextView
            android:id="@+id/img_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_2"
            android:layout_marginRight="10dp"
            android:drawableRight="@mipmap/icon_down_arrow"
            android:drawablePadding="@dimen/dp_6"
            android:gravity="center"
            android:text="+86"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_toRightOf="@+id/img_account"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/str_input_phone_number"
            android:maxLines="1"
            android:text=""
            android:textColor="@color/color_text_gray"
            android:textColorHint="@color/color_text_gray"
            android:textSize="@dimen/text_size_medium" />

    </RelativeLayout>

    <View
        android:id="@+id/line_phone"
        style="@style/line"
        android:layout_marginLeft="@dimen/dp_45"
        android:layout_marginRight="@dimen/dp_45" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_45"
        android:layout_marginRight="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_11">

        <EditText
            android:id="@+id/edt_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_2"
            android:layout_marginRight="10dp"
            android:textColor="@color/color_text_gray"
            android:textColorHint="@color/color_text_gray"
            android:textSize="@dimen/text_size_medium"
            android:background="@null"
            android:maxLength="6"
            android:inputType="number"
            android:hint="验证码" />

        <TextView
            android:id="@+id/tv_get_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_2"
            android:background="@drawable/selector_get_verifycode_bg"
            android:gravity="center"
            android:padding="@dimen/dp_6"
            android:text="@string/str_get_verification_code"
            android:textColor="@drawable/selector_get_verifycode_bg"
            android:textSize="@dimen/text_size_small"
            android:enabled="true" />

    </RelativeLayout>

    <View
        style="@style/line"
        android:layout_marginLeft="@dimen/dp_45"
        android:layout_marginRight="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_11" />

    <TextView
        android:id="@+id/tv_third_party_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@+id/llyt_login_input"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_50"
        android:background="@drawable/bg_rect_gray_shape"
        android:gravity="center"
        android:text="@string/txt_next"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>